--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "http-status-codes": "^2.3.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
